# rust-expect

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LIBRARY_ANALYSIS.md  LICENSE-APACHE  LICENSE-MIT  MIGRATION.md  README.md  RELEASING.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  cliff.toml  clippy.toml  deny.toml  justfile  prompt-chain.md  rust-toolchain.toml  rustfmt.toml  tree.txt
.cargo/: audit.toml  config.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_vulnerability.md
.github/workflows/: bench.yml  ci.yml  release.yml  security.yml
crates/rust-expect/: .env.example  Cargo.toml  README.md
crates/rust-expect-macros/: Cargo.toml  README.md
crates/rust-expect-macros/src/: dialog.rs  lib.rs  patterns.rs  regex.rs  timeout.rs
crates/rust-expect/benches/: comparative.rs  pattern_matching.rs  screen_buffer.rs
crates/rust-expect/examples/: basic.rs  basic_session.rs  dialog.rs  error_handling.rs  interact_hooks.rs  interactive.rs  large_output.rs  metrics.rs  mock_testing.rs  multi_session.rs  patterns.rs  pii_redaction.rs  screen_buffer.rs  ssh.rs  ssh_session.rs  sync_api.rs  transcript.rs  windows_pty_test.rs  zero_config.rs
crates/rust-expect/src/: auto_config.rs  backend.rs  config.rs  dialog.rs  encoding.rs  error.rs  expect.rs  health.rs  interact.rs  lib.rs  metrics.rs  mock.rs  multi.rs  pii.rs  prelude.rs  screen.rs  send.rs  session.rs  sync.rs  test_utils.rs  transcript.rs  types.rs  util.rs  validation.rs
crates/rust-expect/src/auto_config/: line_ending.rs  locale.rs  prompt.rs  shell.rs
crates/rust-expect/src/backend/: pty.rs  ssh.rs
crates/rust-expect/src/backend/ssh/: auth.rs  builder.rs  channel.rs  keepalive.rs  pool.rs  resilient.rs  retry.rs  session.rs
crates/rust-expect/src/config/: env.rs  file.rs
crates/rust-expect/src/dialog/: common.rs  definition.rs  executor.rs
crates/rust-expect/src/expect/: before_after.rs  buffer.rs  cache.rs  large_buffer.rs  matcher.rs  pattern.rs
crates/rust-expect/src/interact/: hooks.rs  mode.rs  session.rs  terminal.rs
crates/rust-expect/src/metrics/: core.rs  mod.rs  otel.rs  prometheus_export.rs
crates/rust-expect/src/mock/: builtin.rs  event.rs  scenario.rs  session.rs
crates/rust-expect/src/multi/: group.rs  mod.rs  select.rs
crates/rust-expect/src/pii/: api_key.rs  credit_card.rs  detector.rs  redactor.rs  registry.rs  ssn.rs
crates/rust-expect/src/screen/: buffer.rs  parser.rs  query.rs
crates/rust-expect/src/send/: basic.rs  human.rs
crates/rust-expect/src/session/: builder.rs  handle.rs  lifecycle.rs  screen.rs
crates/rust-expect/src/test_utils/: assertions.rs  builders.rs  fake_pty.rs  fixtures.rs  mock_session.rs
crates/rust-expect/src/transcript/: asciicast.rs  format.rs  player.rs  recorder.rs
crates/rust-expect/src/util/: backpressure.rs  buffer.rs  bytes.rs  timeout.rs  zerocopy.rs
crates/rust-expect/tests/: auto_config_tests.rs  config_tests.rs  dialog_tests.rs  encoding_tests.rs  error_tests.rs  expect_integration.rs  health_tests.rs  interact_tests.rs  mock_integration.rs  multi_session_tests.rs  pattern_tests.rs  pii_tests.rs  platform_tests.rs  screen_tests.rs  send_tests.rs  spawn_integration.rs  ssh_tests.rs  sync_tests.rs  transcript_tests.rs
crates/rust-expect/tests/integration/: dialog_tests.rs  mod.rs  pattern_tests.rs  session_tests.rs
crates/rust-expect/tests/platform/: mod.rs  unix.rs  windows.rs
crates/rust-pty/: Cargo.toml  README.md
crates/rust-pty/src/: config.rs  error.rs  lib.rs  traits.rs  unix.rs  windows.rs
crates/rust-pty/src/unix/: buffer.rs  child.rs  pty.rs  signals.rs
crates/rust-pty/src/windows/: async_adapter.rs  child.rs  conpty.rs  pipes.rs
docs/: GUIDE.md
fixtures/configs/: custom.toml  default.toml
fixtures/keys/: test_ed25519  test_ed25519.pub
fixtures/transcripts/: shell_session.ndjson  ssh_login.ndjson  sudo_prompt.ndjson
supply-chain/: config.toml
test-utils/: Cargo.toml
test-utils/test-echo/: Cargo.toml
test-utils/test-echo/src/: main.rs
test-utils/test-hang/: Cargo.toml
test-utils/test-hang/src/: main.rs
test-utils/test-output/: Cargo.toml
test-utils/test-output/src/: main.rs
test-utils/test-prompt/: Cargo.toml
test-utils/test-prompt/src/: main.rs
test-utils/test-signals/: Cargo.toml
test-utils/test-signals/src/: main.rs
test-utils/test-timing/: Cargo.toml
test-utils/test-timing/src/: main.rs
