# rust-expect: Next-generation terminal automation library
# https://docs.rs/rust-expect

[package]
name = "rust-expect"
description = "Next-generation Expect-style terminal automation library for Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
# Core dependencies
rust-pty.workspace = true
rust-expect-macros.workspace = true

# Async runtime
tokio.workspace = true

# Pattern matching
regex.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Terminal manipulation (for interactive mode)
crossterm.workspace = true

# Serialization (for transcripts and config)
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

# Random number generation (for human typing simulation)
rand.workspace = true

# Futures utilities for async combinators
futures.workspace = true
tokio-stream.workspace = true

# Zero-copy byte buffers
bytes.workspace = true

# libc for low-level Unix operations
libc.workspace = true

# ANSI parsing (optional, for screen buffer)
vte = { workspace = true, optional = true }

# Bitflags for terminal attributes (screen buffer)
bitflags = { workspace = true, optional = true }

# SSH support (optional)
russh = { workspace = true, optional = true }
russh-keys = { workspace = true, optional = true }

# OpenTelemetry for distributed tracing (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

# Prometheus metrics (optional)
prometheus = { workspace = true, optional = true }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
expectrl.workspace = true

[[bench]]
name = "pattern_matching"
harness = false

[[bench]]
name = "screen_buffer"
harness = false

[[bench]]
name = "comparative"
harness = false

[features]
default = []

# Enable SSH backend for remote sessions
ssh = ["dep:russh", "dep:russh-keys"]

# Enable mock backend for testing
mock = []

# Enable screen buffer with ANSI parsing
screen = ["dep:vte", "dep:bitflags"]

# Enable PII detection and redaction
pii-redaction = []

# Enable legacy character encodings (Latin-1, Windows-1252)
legacy-encoding = []

# Enable Prometheus/OpenTelemetry metrics
metrics = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
    "dep:prometheus",
]

# Enable test utilities
test-utils = []

# DANGEROUS: Enable HostKeyVerification::AcceptAll which disables SSH host key verification.
# This is insecure and should ONLY be used in controlled testing environments.
# Enabling this in production allows MITM attacks. You have been warned.
insecure-skip-verify = []

# Enable all optional features (excludes insecure-skip-verify for safety)
full = ["ssh", "mock", "screen", "pii-redaction", "metrics"]
