# test-timing: Precise timing for timeout tests

[package]
name = "test-timing"
version = "0.0.0"  # Internal only, not published
edition.workspace = true
publish = false
description = "Precise timing program for rust-expect timeout testing"

[[bin]]
name = "test-timing"
path = "src/main.rs"

[dependencies]
# Minimal dependencies for test binary

[lints]
workspace = true
